--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Generic test that uses conan libs
 include_directories(../include)
 
-add_executable(lotrchess main.cpp string_manip.cpp board.cpp board_view.cpp)
+add_executable(lotrchess main.cpp string_manip.cpp board.cpp board_view.cpp music_player.cpp)
 target_link_libraries(
         lotrchess
   PRIVATE project_options
