added battle setup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Generic test that uses conan libs
 include_directories(../include)
 
-add_executable(lotrchess main.cpp string_manip.cpp board.cpp board_view.cpp music_player.cpp)
+add_executable(lotrchess main.cpp lotrchess.cpp play_mode.cpp splash_mode.cpp battle_setup_mode.cpp splash_dialog.cpp splash_dialog_view.cpp battle_setup_dialog.cpp battle_setup_dialog_view.cpp string_manip.cpp board.cpp board_view.cpp music_player.cpp toggle_button.cpp)
 target_link_libraries(
         lotrchess
   PRIVATE project_options
