--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,5 @@ target_link_libraries(
           CONAN_PKG::docopt.cpp
           CONAN_PKG::fmt
           CONAN_PKG::spdlog
-          CONAN_PKG::imgui-sfml)
+          CONAN_PKG::imgui-sfml
+        Boost::program_options)
